[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "token-tamer"
version = "0.2.0"
description = "A drop-in proxy that compresses bloated code context in real-time, cutting LLM API costs by 50–80%."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Borhen Eddine Saidi"}
]
keywords = ["llm", "tokens", "proxy", "ast", "openai", "anthropic", "coding-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.25.0",
    "tiktoken>=0.5.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx",  # for test client
]

[project.scripts]
token-tamer = "token_tamer.__main__:main"

[tool.setuptools.packages.find]
include = ["token_tamer*"]
